# gestura

./: README.md  gestura.db  pyproject.toml
notebooks/: main.ipynb
src/gestura/: __init__.py  main.py
src/gestura.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gestura/core/: database_manager.py
src/gestura/services/: engine.py
src/gestura/services/auth/: authcontroller.py
src/gestura/utils/: audio_player.py
