# ==========================================
# Build System & Infrastructure
# ==========================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ==========================================
# Project Metadata
# ==========================================
[project]
name = "gestura"
version = "0.1.0"
description = "Aplikasi pengenalan gestur tangan"
authors = [
    { name = "Naufal Fatihul", email = "nfatihulx@gmail.com" }
]
requires-python = ">=3.9"

# ==========================================
# Dependencies (Berdasarkan requirements.txt)
# ==========================================
dependencies = [
    "absl-py==2.4.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "cffi==2.0.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dearpygui==2.2",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "flatbuffers==25.12.19",
    "fonttools==4.62.1",
    "ipykernel==7.2.0",
    "ipython==8.39.0",
    "jedi==0.19.2",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mediapipe==0.10.9",
    "nbformat==5.10.4",
    "nbstripout==0.9.1",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "opencv-contrib-python==4.13.0.92",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.6",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "prompt_toolkit==3.0.52",
    "protobuf==3.20.3",
    "psutil==7.2.2",
    "pure_eval==0.2.3",
    "pycparser==3.0",
    "Pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sounddevice==0.5.5",
    "stack-data==0.6.3",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing_extensions==4.15.0",
    "tzdata==2026.1",
    "wcwidth==0.6.0"
]

# ==========================================
# Setuptools Configuration (Membaca folder src)
# ==========================================
[tool.setuptools.packages.find]
where = ["src"]